--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.meetingroom" >
+    package="com.meetingroom">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MeetingApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".MeetingApp">
-        <activity android:name=".MainActivity" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,6 +23,7 @@
             android:label="@string/title_activity_meeting_list"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MeetingDescActivity" />
+        <activity android:name=".MeetingAddActivity"></activity>
     </application>
 
 </manifest>
