--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,10 @@
             android:label="@string/title_activity_meeting_list"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MeetingDescActivity" />
-        <activity android:name=".MeetingAddActivity"></activity>
+        <activity android:name=".MeetingAddActivity" />
+        <activity
+            android:name=".SettingPreference"
+            android:label="Settings" />
     </application>
 
 </manifest>
