--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity
             android:name=".SettingPreference"
             android:label="Settings" />
-        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".MeetingSearchActivity"></activity>
     </application>
 
 </manifest>
