--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.meetingroom">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR"> </uses-permission>
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
 
     <application
         android:name=".MeetingApp"
@@ -28,6 +30,7 @@
             android:name=".SettingPreference"
             android:label="Settings" />
         <activity android:name=".MeetingSearchActivity"></activity>
+
     </application>
 
 </manifest>
