fix update meetings service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".SettingPreference"
             android:label="Settings" />
         <activity android:name=".MeetingSearchActivity"></activity>
+        <service
+            android:name=".MeetingListService"
+            android:exported="false">
+        </service>
 
     </application>
 
