fix add Partys Service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
             android:name=".MeetingDescService"
             android:exported="false">
         </service>
+        <service
+            android:name=".MeetingPartyService"
+            android:exported="false">
+        </service>
 
     </application>
 
