--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
             android:name=".services.MeetingSearchService"
             android:exported="false">
         </service>
+        <service
+            android:name=".services.MeetingAddService"
+            android:exported="false">
+        </service>
 
     </application>
 
