--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,10 @@
             android:name=".services.MeetingAddService"
             android:exported="false">
         </service>
+        <service
+            android:name=".services.MeetingListServiceTime"
+            android:exported="false">
+        </service>
 
     </application>
 
